correct from Evgenij

--- a/src/pug/3-2service-inner.pug
+++ b/src/pug/3-2service-inner.pug
@@ -320,21 +320,23 @@ block content
 							.services-config-ordering
 								a(href="#", data-scroll-to="#form-order").services-config-ordering__link.link-button.btn-scrl Заказать 
 							.data-center-cooperation
-								.data-center-cooperation__promo(style="background-image:url('img/services-page.jpg')")
+								a(href="#", style="background-image:url('img/services-page.jpg')").data-center-cooperation__promo
 									.data-center-partner
 										p.data-center-partner__title Стоимость
 										p.data-center-partner__text Тарифы разрабатываются индивидуально для каждого клиента — вы платите только за фактически оказанные услуги, экономя бюджет
-								.data-center-cooperation__details
-									p.text-small Позвоните нам&#32;
-										a(href="tel:+375 29 600 04 11")
-											strong +375 29 600 04 11
-										|, отправьте заявку по электронной почте&#32;
-										a(href="mailto:sales@vdc.by")
-											strong sales@vdc.by
-										|&#32;или заполните&#32;
-										a(href="#")
-											strong форму обратной связи
-										|, и консультант свяжется с вами для разработки индивидуального предложения
+								.content-area
+									p
+										small
+											|Позвоните нам&#32;
+											a(href="tel:+375 29 600 04 11")
+												strong +375 29 600 04 11
+											|, отправьте заявку по электронной почте&#32;
+											a(href="mailto:sales@vdc.by")
+												strong sales@vdc.by
+											|&#32;или заполните&#32;
+											a(href="#")
+												strong форму обратной связи
+											|, и консультант свяжется с вами для разработки индивидуального предложения
 					hr
 					.services-config-inner
 						.form-block#form-order
