--- a/src/pug/etalon.pug
+++ b/src/pug/etalon.pug
@@ -133,11 +133,11 @@ block content
 
 					hr
 					.data-center-cooperation
-						.data-center-cooperation__promo(style="background-image:url('img/partner-bg.jpg')")
+						a(href="#", style="background-image:url('img/partner-bg.jpg')").data-center-cooperation__promo
 							.data-center-partner
 								p.data-center-partner__title Сотрудничество
 								p.data-center-partner__text Мы открыты к сотрудничеству и всегда рады найти новых деловых партнеров
-								a(href="#").data-center-partner__link.link-button.link-button_small Стать партнёром
+								.data-center-partner__link.link-button.link-button_small Стать партнёром
 
 					p
 						small
