--- a/src/pug/includes/_mixins.pug
+++ b/src/pug/includes/_mixins.pug
@@ -61,7 +61,7 @@ mixin contacts-header
 
 mixin link-more(text, add_class)
 	div(class="link-more "+add_class)
-		a(href="#")= text
+		a.link-more__item(href="#")= text
 			span.link-more__arrow
 				+icon('arrow-circle')
 
