--- a/src/pug/sertificate-popup.pug
+++ b/src/pug/sertificate-popup.pug
@@ -14,7 +14,7 @@ include includes/_mixins.pug
 						img(src="img/sertificate-2-big.jpg", alt="sertificate")
 				.big-image-slide
 					.big-image-slide-inner
-						img(src="img/gallery-photo-3.jpg", alt="sertificate")
+						img(src="img/sertificate-2-big.jpg", alt="sertificate")
 				.big-image-slide
 					.big-image-slide-inner
 						img(src="img/sertificate-2-big.jpg", alt="sertificate")
