--- a/src/pug/3-0service.pug
+++ b/src/pug/3-0service.pug
@@ -19,39 +19,28 @@ block content
 	.basic-services.basic-services_page
 		.box
 			h2.basic-services-title.h2 Основные услуги
-			.basic-services-slider
-				.basic-services-outer
-					.basic-services-wrapper
-						a(href="#").service-card
-							h4.service-card__title.h4 Co-location
-								span.service-card__t-arrow
-									+icon('arrow-circle')
-							p.service-card__desc.text-primary Предоставление в аренду серверных шкафов либо площадей в дата-центре для размещения оборудования Клиентов
-							span.service-card__link.link-button.link-button_small(href="#") Узнать больше
-							.service-card__icon
-								<svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 53 63.5"><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M.5.5h52v16H.5zm4 20v-4m44 0v4m-42-15v6m4-6v6m4-6v6m4-6v6m4-6v6m-22 9h52v16H.5zm4 20v-4m44 0v4m-42-15v6m4-6v6m4-6v6m4-6v6m4-6v6m14-3h-2m-2 0h-2m-2 0h-2m-26 12h52v16H.5zm4 23v-7m44 0v7m-42-18v6m4-6v6m4-6v6m4-6v6m4-6v6"/><circle cx="43.5" cy="28.5" r="3" fill="none" stroke="currentcolor" stroke-miterlimit="10"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M36.5 48.5h-2m-2 0h-2m-2 0h-2"/><circle cx="43.5" cy="48.5" r="3" fill="none" stroke="currentcolor" stroke-miterlimit="10"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M36.5 8.5h-2m-2 0h-2m-2 0h-2"/><circle cx="43.5" cy="8.5" r="3" fill="none" stroke="currentcolor" stroke-miterlimit="10"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M7.5 60.5h38"/></svg>
-						a(href="#").service-card
-							h4.service-card__title.h4 Выделенные сервера
-								span.service-card__t-arrow
-									+icon('arrow-circle')
-							p.service-card__desc.text-primary Аренда каналов до точек присутствия на крупнейших телекоммуникационных узлах а также каналы «точка-точка» до любого адреса.
-							span.service-card__link.link-button.link-button_small(href="#") Узнать больше
-							.service-card__icon
-								<svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 63 63"><path fill="none" stroke="currentcolor" d="M62.5 31.5H.5" stroke-linejoin="round"/><circle cx="31.5" cy="31.5" r="31" fill="none" stroke="currentcolor" stroke-miterlimit="10"/><path fill="none" stroke="currentcolor" d="M18.2 41.5a63.65 63.65 0 0 1-.7-10c0-17.1 6.3-31 14-31 5.1 0 9.5 6 12 15m1.3 6a63.65 63.65 0 0 1 .7 10c0 17.1-6.3 31-14 31-5.1 0-9.5-6-12-15" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" d="M15.5 43.5c-9-2.5-15-6.9-15-12 0-7.7 13.9-14 31-14a78.47 78.47 0 0 1 10 .7m6 1.3c9 2.5 15 6.9 15 12 0 7.7-13.9 14-31 14a78.47 78.47 0 0 1-10-.7" stroke-linejoin="round"/><circle cx="44.5" cy="18.5" r="3" fill="none" stroke="currentcolor" stroke-linejoin="round"/><circle cx="18.5" cy="44.5" r="3" fill="none" stroke="currentcolor" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" d="M26.5 25.5h2m2 0h2m2 0h2m-10 12h2m2 0h2m2 0h2" stroke-linejoin="round"/></svg>
-						a(href="#").service-card
-							h4.service-card__title.h4 IaaS
-								span.service-card__t-arrow
-									+icon('arrow-circle')
-							p.service-card__desc.text-primary Позволяет клиенту воспользоваться полноценным ИТ-сервисом, получая необходимый инфраструктурный комплекс решений в рамках виртуальной инфраструктуры velcom
-							span.service-card__link.link-button.link-button_small(href="#") Узнать больше
-							.service-card__icon
-								<svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 64 63"><path fill="none" stroke="currentcolor" d="M27 48.5l-4-4-4 4m26 0l-4-4-4 4m-1 10l-4 4-4-4" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" d="M23 44.5v11H0m41-11v11h23m-32-12v19" stroke-linejoin="round"/><circle cx="30" cy="14.5" r="7" fill="none" stroke="currentcolor" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M44 5.5c5 0 10 6 10 12 5 0 9 5.1 9 11a12 12 0 0 1-12 12H13a12 12 0 0 1 0-24"/><circle cx="30" cy="14.5" r="3" fill="none" stroke="currentcolor" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" d="M25 35.5h-2m14 0h-2m-2 0h-2m-2 0h-2m14 0h-2" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M41 14.5V14l2.8-1.9a22.47 22.47 0 0 0-1.2-3.7l-3.4.1c-.2-.3-.4-.5-.6-.8l1.1-3.2a12.44 12.44 0 0 0-3.2-2.3l-2.7 2.1-.9-.3-1-3.3a12.31 12.31 0 0 0-2-.2 13.55 13.55 0 0 0-2 .2l-1 3.3-.9.3-2.7-2.1a14.43 14.43 0 0 0-3.2 2.3l1.1 3.2c-.2.3-.4.5-.6.8l-3.4-.1a12.34 12.34 0 0 0-1.2 3.7l3 1.9v1l-2.8 1.9a11.49 11.49 0 0 0 1.2 3.7l3.4-.1c.2.3.4.5.6.8l-1.1 3.2a12.44 12.44 0 0 0 3.2 2.3l2.7-2.1.9.3 1 3.3a12.31 12.31 0 0 0 2 .2 13.55 13.55 0 0 0 2-.2l1-3.3.9-.3 2.7 2.1a14.43 14.43 0 0 0 3.2-2.3l-1.1-3.2c.2-.3.4-.5.6-.8l3.4.1a12.34 12.34 0 0 0 1.2-3.7L41 15z"/></svg>
-						a(href="#").service-card
-							h4.service-card__title.h4 IaaS
-								span.service-card__t-arrow
-									+icon('arrow-circle')
-							p.service-card__desc.text-primary Позволяет клиенту воспользоваться полноценным ИТ-сервисом, получая необходимый инфраструктурный комплекс решений в рамках виртуальной инфраструктуры velcom
-							span.service-card__link.link-button.link-button_small(href="#") Узнать больше
-							.service-card__icon
-								<svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 64 63"><path fill="none" stroke="currentcolor" d="M27 48.5l-4-4-4 4m26 0l-4-4-4 4m-1 10l-4 4-4-4" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" d="M23 44.5v11H0m41-11v11h23m-32-12v19" stroke-linejoin="round"/><circle cx="30" cy="14.5" r="7" fill="none" stroke="currentcolor" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M44 5.5c5 0 10 6 10 12 5 0 9 5.1 9 11a12 12 0 0 1-12 12H13a12 12 0 0 1 0-24"/><circle cx="30" cy="14.5" r="3" fill="none" stroke="currentcolor" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" d="M25 35.5h-2m14 0h-2m-2 0h-2m-2 0h-2m14 0h-2" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M41 14.5V14l2.8-1.9a22.47 22.47 0 0 0-1.2-3.7l-3.4.1c-.2-.3-.4-.5-.6-.8l1.1-3.2a12.44 12.44 0 0 0-3.2-2.3l-2.7 2.1-.9-.3-1-3.3a12.31 12.31 0 0 0-2-.2 13.55 13.55 0 0 0-2 .2l-1 3.3-.9.3-2.7-2.1a14.43 14.43 0 0 0-3.2 2.3l1.1 3.2c-.2.3-.4.5-.6.8l-3.4-.1a12.34 12.34 0 0 0-1.2 3.7l3 1.9v1l-2.8 1.9a11.49 11.49 0 0 0 1.2 3.7l3.4-.1c.2.3.4.5.6.8l-1.1 3.2a12.44 12.44 0 0 0 3.2 2.3l2.7-2.1.9.3 1 3.3a12.31 12.31 0 0 0 2 .2 13.55 13.55 0 0 0 2-.2l1-3.3.9-.3 2.7 2.1a14.43 14.43 0 0 0 3.2-2.3l-1.1-3.2c.2-.3.4-.5.6-.8l3.4.1a12.34 12.34 0 0 0 1.2-3.7L41 15z"/></svg>
-				.basic-services__nav
+			.basic-services-list
+				a(href="#").service-card
+					h4.service-card__title.h4 Co-location
+						span.service-card__t-arrow
+							+icon('arrow-circle')
+					p.service-card__desc.text-primary Предоставление в аренду серверных шкафов либо площадей в дата-центре для размещения оборудования Клиентов
+					span.service-card__link.link-button.link-button_small(href="#") Узнать больше
+					.service-card__icon
+						<svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 53 63.5"><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M.5.5h52v16H.5zm4 20v-4m44 0v4m-42-15v6m4-6v6m4-6v6m4-6v6m4-6v6m-22 9h52v16H.5zm4 20v-4m44 0v4m-42-15v6m4-6v6m4-6v6m4-6v6m4-6v6m14-3h-2m-2 0h-2m-2 0h-2m-26 12h52v16H.5zm4 23v-7m44 0v7m-42-18v6m4-6v6m4-6v6m4-6v6m4-6v6"/><circle cx="43.5" cy="28.5" r="3" fill="none" stroke="currentcolor" stroke-miterlimit="10"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M36.5 48.5h-2m-2 0h-2m-2 0h-2"/><circle cx="43.5" cy="48.5" r="3" fill="none" stroke="currentcolor" stroke-miterlimit="10"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M36.5 8.5h-2m-2 0h-2m-2 0h-2"/><circle cx="43.5" cy="8.5" r="3" fill="none" stroke="currentcolor" stroke-miterlimit="10"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M7.5 60.5h38"/></svg>
+				a(href="#").service-card
+					h4.service-card__title.h4 Выделенные сервера
+						span.service-card__t-arrow
+							+icon('arrow-circle')
+					p.service-card__desc.text-primary Аренда каналов до точек присутствия на крупнейших телекоммуникационных узлах а также каналы «точка-точка» до любого адреса.
+					span.service-card__link.link-button.link-button_small(href="#") Узнать больше
+					.service-card__icon
+						<svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 63 63"><path fill="none" stroke="currentcolor" d="M62.5 31.5H.5" stroke-linejoin="round"/><circle cx="31.5" cy="31.5" r="31" fill="none" stroke="currentcolor" stroke-miterlimit="10"/><path fill="none" stroke="currentcolor" d="M18.2 41.5a63.65 63.65 0 0 1-.7-10c0-17.1 6.3-31 14-31 5.1 0 9.5 6 12 15m1.3 6a63.65 63.65 0 0 1 .7 10c0 17.1-6.3 31-14 31-5.1 0-9.5-6-12-15" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" d="M15.5 43.5c-9-2.5-15-6.9-15-12 0-7.7 13.9-14 31-14a78.47 78.47 0 0 1 10 .7m6 1.3c9 2.5 15 6.9 15 12 0 7.7-13.9 14-31 14a78.47 78.47 0 0 1-10-.7" stroke-linejoin="round"/><circle cx="44.5" cy="18.5" r="3" fill="none" stroke="currentcolor" stroke-linejoin="round"/><circle cx="18.5" cy="44.5" r="3" fill="none" stroke="currentcolor" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" d="M26.5 25.5h2m2 0h2m2 0h2m-10 12h2m2 0h2m2 0h2" stroke-linejoin="round"/></svg>
+				a(href="#").service-card
+					h4.service-card__title.h4 IaaS
+						span.service-card__t-arrow
+							+icon('arrow-circle')
+					p.service-card__desc.text-primary Позволяет клиенту воспользоваться полноценным ИТ-сервисом, получая необходимый инфраструктурный комплекс решений в рамках виртуальной инфраструктуры velcom
+					span.service-card__link.link-button.link-button_small(href="#") Узнать больше
+					.service-card__icon
+						<svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 64 63"><path fill="none" stroke="currentcolor" d="M27 48.5l-4-4-4 4m26 0l-4-4-4 4m-1 10l-4 4-4-4" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" d="M23 44.5v11H0m41-11v11h23m-32-12v19" stroke-linejoin="round"/><circle cx="30" cy="14.5" r="7" fill="none" stroke="currentcolor" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M44 5.5c5 0 10 6 10 12 5 0 9 5.1 9 11a12 12 0 0 1-12 12H13a12 12 0 0 1 0-24"/><circle cx="30" cy="14.5" r="3" fill="none" stroke="currentcolor" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" d="M25 35.5h-2m14 0h-2m-2 0h-2m-2 0h-2m14 0h-2" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M41 14.5V14l2.8-1.9a22.47 22.47 0 0 0-1.2-3.7l-3.4.1c-.2-.3-.4-.5-.6-.8l1.1-3.2a12.44 12.44 0 0 0-3.2-2.3l-2.7 2.1-.9-.3-1-3.3a12.31 12.31 0 0 0-2-.2 13.55 13.55 0 0 0-2 .2l-1 3.3-.9.3-2.7-2.1a14.43 14.43 0 0 0-3.2 2.3l1.1 3.2c-.2.3-.4.5-.6.8l-3.4-.1a12.34 12.34 0 0 0-1.2 3.7l3 1.9v1l-2.8 1.9a11.49 11.49 0 0 0 1.2 3.7l3.4-.1c.2.3.4.5.6.8l-1.1 3.2a12.44 12.44 0 0 0 3.2 2.3l2.7-2.1.9.3 1 3.3a12.31 12.31 0 0 0 2 .2 13.55 13.55 0 0 0 2-.2l1-3.3.9-.3 2.7 2.1a14.43 14.43 0 0 0 3.2-2.3l-1.1-3.2c.2-.3.4-.5.6-.8l3.4.1a12.34 12.34 0 0 0 1.2-3.7L41 15z"/></svg>
