--- a/src/sass/_inputs.sass
+++ b/src/sass/_inputs.sass
@@ -1,15 +1,13 @@
 .form-block
 	padding: 40px 0 0 0
 	width: 100%
-	background-color: #f5f5f5
-	&__head
-		padding: 0 34px
-	&__body
-		padding: 0 34px
+	background-color: #ffffff
+	// &__head
+	// &__body
 	&__footer
 		margin-top: 10px
-		padding: 33px 34px 60px 34px
-		background-color: #eeeeee
+		padding: 33px 0 60px 0
+		background-color: #fafafa
 	&__title
 		margin-bottom: 20px
 		width: 100%
@@ -74,6 +72,8 @@
 				margin-top: 0 !important
 			.input-wrapper
 				width: auto
+				border: 1px solid #cccccc
+				border-radius: 2px
 				// margin: 0!important
 				.select2,.input-main
 					height: 60px
@@ -149,6 +149,8 @@
 			padding: 30px 10px 10px 25px
 			resize: none
 			background-color: #FFF
+			+r(450)
+				padding: 30px 10px 10px 10px
 			&:hover
 				border-color: #000000
 			&:focus
@@ -200,15 +202,16 @@
 				height: 5px
 				top: 50%
 				transform: translateY(-50%)
-				right: 5px
+				right: 20px
 				background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGRhdGEtbmFtZT0iTGF5ZXIgMSIgdmlld0JveD0iMCAwIDE4LjEgMTEuMiI+PHBhdGggZD0iTTE2IDBMOS4xIDYuOSAyLjEgMCAwIDIuMWw5LjEgOS4xIDktOS4xTDE2IDAiIGZpbGw9ImN1cnJlbnRjb2xvciIvPjwvc3ZnPg==);
 				background-repeat: no-repeat
 				+tr(transform .5s ease)
+				+r(450)
+					right: 10px
 				b
 					display: none
 			&.select2-container--open
 				border: 2px solid #000
-				border-bottom-color: #cccccc
 				margin-top: -1px
 				.select2-selection__arrow
 					transform: translateY(-50%) rotate(180deg)
@@ -227,19 +230,31 @@
 				ul::-webkit-scrollbar-thumb
 					box-shadow: inset 0 0 35px 35px #f2db00
 	&-label
+		cursor: inherit
 		position: absolute
 		top: 22px
 		left: 25px
 		color: #737373
+		background-color: #ffffff
 		font-size: 16px
 		line-height: 1.3
+		white-space: nowrap
+		text-overflow: ellipsis
+		overflow: hidden
 		+tr(all .3s ease)
+		+r(640)
+			max-width: 80%
+		+r(450)
+			font-size: 14px
+			left: 10px
 		&.fixed
 			opacity: .7
 			font-size: 12px
 			top: 10px
 		&.sm 
 			font-size: 14px
+			+r(450)
+				font-size: 12px
 	&-counter
 		&-nav
 			position: absolute
@@ -306,7 +321,7 @@
 	&-input
 		display: none
 		&:checked ~ .radio-label
-			background-color: #fdfcd5
+			background-color: #fff233
 			border-color: #cdc115
 			.radio-label__custom
 				background-color: #ffffff
@@ -321,7 +336,7 @@
 		margin-right: -1px
 		margin-bottom: -1px
 		min-width: 113px
-		background-color: #f5f5f5
+		background-color: #ffffff
 		+tr(all .3s ease)
 		&:hover
 			cursor: pointer
@@ -336,9 +351,8 @@
 			vertical-align: middle
 			width: 18px
 			height: 18px
-			border: 1px solidcccccc
 			background-color: #ffffff
-			border: 1px solid transparent
+			border: 1px solid #cccccc
 			border-radius: 50%
 			box-shadow: inset 0px 2px 10px 0px rgba(0, 0, 0, 0.13)
 			margin-right: 15px
@@ -354,7 +368,6 @@
 			left: 50%
 			transform: translate(-50%, -50%)
 			background-color: #f2db00
-			background-image: linear-gradient(#fcf728 0%, #e9c305 100%)
 			opacity: 0
 			+tr(all .3s ease)
 	+r(768)
@@ -369,6 +382,7 @@
 	display: inline-block
 	vertical-align: middle
 	font-size: 14px
+	line-height: 1.5
 	color: #767a7d
 	a
 		color: #000000
@@ -378,17 +392,7 @@
 	input
 		display: none
 		&:checked + .check-label__custom .check-label__checked
-			opacity: 1
-	&__checked
-		display: width
-		width: 15px
-		height: 15px
-		position: absolute
-		top: 50%
-		left: 50%
-		transform: translate(-50%, -50%)
-		opacity: 0
-		+tr(all .3s ease)
+			width: 15px
 	&__custom
 		display: inline-block
 		vertical-align: middle
@@ -405,6 +409,15 @@
 			background-color: #fafafa
 			border-color: #000000
 			cursor: pointer
+	&__checked
+		display: block
+		width: 0
+		height: 100%
+		margin-left: 4px
+		overflow: hidden
+		transition: width .4s ease-in-out
+		svg
+			min-width: 15px
 
 .disabled-field
 	border-color: #c3c3c3
@@ -436,8 +449,8 @@
 	border: 1px solid #dbcf1b
 	background-color: #fff233
 	border-radius: 5px
-	background-image: linear-gradient(#fff94e 0%, #ffeb18 100%)
-	box-shadow: 0px 5px 10px 0px rgba(107, 101, 7, 0.26)
+	// background-image: linear-gradient(#fff94e 0%, #ffeb18 100%)
+	// box-shadow: 0px 5px 10px 0px rgba(107, 101, 7, 0.26)
 	+tr(all .3s ease)
 	&:hover
 		background-color: #fff94e
