--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -174,13 +174,15 @@ body
 				width: 100%
 				padding: 20px 50px 20px 150px
 	+r(768)
-		padding: 90px 0 20px
+		padding: 130px 0 10px
 		&__title
 			a
-				margin-top: 35px
+				margin-top: 20px
 			&_col
 				padding-left: 0
 				padding-right: 0
+			&_offset
+				margin-bottom: 50px
 		&__desc
 			&_col
 				padding-left: 0
@@ -225,7 +227,8 @@ body
 	+r(768)
 		width: auto
 		&__item
-			margin-bottom: 0px
+			margin-bottom: 0
+			padding-bottom: 0
 		&__body
 			width: 100%
 			padding-right: 15px
@@ -896,44 +899,48 @@ body
 .site-map
 	display: flex
 	flex-wrap: wrap
-.site-map-wrap
-	width: 29%
-	max-width: 250px
-	margin-right: 6%
-	&:nth-child(3n)
-		margin-right: 0
-	+r(620)
-		width: 100%
-		max-width: 450px
-		margin: 0 auto
+	.site-map-wrap
+		width: 29%
+		max-width: 250px
+		margin-right: 6%
 		&:nth-child(3n)
-			margin-right: auto
-.site-map-list
-	margin-top: 10px
-.page-link
-	display: block
-	font-size: 18px
-	font-weight: bold
-	line-height: 1.5
-	padding: 0 0 20px
-	color: #000000
-	border-bottom: 1px solid #cccccc
-	+tr(color .1s ease-in-out)
-	&:hover
-		+notouch
-			color: #ecdc00
-	&:not(:first-child)
-		margin-top: 40px
-	+r(620)
-		&:last-child
-			border: none
-.sub-page-link
-	padding: 5px 0
-	margin-bottom: 10px
-	+tr(color .1s ease-in-out)
-	&:hover
-		+notouch
-			color: #000000
+			margin-right: 0
+		+r(620)
+			width: 100%
+			max-width: 450px
+			margin: 0 auto
+			&:nth-child(3n)
+				margin-right: auto
+	.site-map-list
+		margin-top: 10px
+	.page-link
+		display: block
+		font-size: 18px
+		font-weight: bold
+		line-height: 1.5
+		padding: 0
+		padding-bottom: 20px
+		color: #000000
+		border-bottom: 1px solid #cccccc
+		+tr(color .1s ease-in-out)
+		&:hover
+			+notouch
+				color: #ecdc00
+		&:not(:first-child)
+			margin-top: 40px
+			+r(768)
+				margin-top: 20px
+				padding-bottom: 15px
+		+r(620)
+			&:last-child
+				border: none
+	.sub-page-link
+		padding: 5px 0
+		margin-bottom: 10px
+		+tr(color .1s ease-in-out)
+		&:hover
+			+notouch
+				color: #000000
 
 
 .search-wrap
@@ -1076,11 +1083,12 @@ body
 		.selects
 			border-color: #f2db00
 	// прокрутка
-	div::-webkit-scrollbar
-		width: 9px
-		background-color: #ebebeb
-	div::-webkit-scrollbar-thumb
-		box-shadow: inset 0 0 35px 35px #f2db00
+	+notouch
+		div::-webkit-scrollbar
+			width: 9px
+			background-color: #ebebeb
+		div::-webkit-scrollbar-thumb
+			box-shadow: inset 0 0 35px 35px #f2db00
 	.dropdown-inner
 		box-shadow: 0px 12px 30px 0px rgba(0, 0, 0, 0.2)
 		border: 1px solid #cccccc
