--- a/src/sass/_modal.sass
+++ b/src/sass/_modal.sass
@@ -2,10 +2,17 @@
 .pop-close
 	width: 25px
 	height: 25px
+	padding: 10px
 	color: #000000
 	display: inline-block
 	padding: 5px
 	box-sizing: content-box
+	position: absolute
+	z-index: 20
+	+tr(all .5s ease)
+	&:hover
+		cursor: pointer
+		transform: rotate(90deg)
 .modals
 	visibility: hidden
 	pointer-events: none
@@ -25,111 +32,256 @@
 	z-index: 200
 	opacity: 0
 	visibility: hidden
-	transition: background-color .2s, opacity .2s, visibility .2s
-	transition-delay: .1s
+	transition: background-color .25s, opacity .25s, visibility .25s
 	text-align: center
+	transition-delay: .1s
 	contain: paint 
 	pointer-events: all
+	&_fade-right
+		text-align: right
+	&_fade-left
+		text-align: left
 	&.active
 		background-color: rgba(0,0,0, .6)
 		visibility: visible
 		opacity: 1
 		transition-delay: 0s
-		& .modal-container
+		.modal-container
 			opacity: 1
-			transition-delay: 0s
-		& .application-modal
-			transform: translateX(0)
-			opacity: 1
-		& .modal-menu
-			transform: translateX(0)
-			opacity: 1
+			transition-delay: .2s
+			transform: none
+			visibility: visible
+
 .modal-container
 	margin-top: 60px
 	margin-bottom: 60px
 	display: inline-block
-	// vertical-align: middle
 	text-align: left
 	width: auto
 	background-color: #ffffff
 	position: relative
-	+tr(opacity .2s)
-	opacity: 0s
-	transition-delay: .2s
+	transition: opacity .25s, visibility .25s
+	opacity: 0
+	visibility: hidden
+	transition-delay:  0s
+	overflow-x: hidden
+	overflow-y: auto
 	&-content
 		padding: 10px
 		text-align: left
 	&-inner
+		overflow-y: auto
 		position: relative
-		.pop-close
-			display: block
-			padding: 10px
-			box-sizing: content-box
-			color: #000000
-			position: absolute
-			right: 25px
-			top: 20px
-			z-index: 20
-			+tr(all .5s ease)
-			&:hover
-				cursor: pointer
-				transform: rotate(90deg)
+		form
+			overflow: hidden
 
+// .modal-container modificate
 .application-modal
 	width: 100%
 	height: 100%
 	padding: 20px 70px 70px 80px
 	max-width: 873px
-	background-color: #ffffff
-	overflow-y: auto
-	position: fixed
-	top: 0
-	right: 0
 	margin-top: 0
 	margin-bottom: 0
-	transform: translateX(20%)
-	opacity: 0
-	transition: all 0.3s cubic-bezier(0.25, 0.5, 0.5, 0.9)
-	animation-name: none
+	transform: translateX(40%)
+	transition: transform 0.25s cubic-bezier(0.25, 0.5, 0.5, 0.9), opacity .25s, visibility .25s
 	.form-block
 		background-color: #ffffff
 		&__footer
 			background-color: #ffffff
 	.pop-close
-		right: -60px
-		top: -10px
+		right: 25px
+		top: 20px
 	+r(850)
 		padding: 20px 30px 70px 30px
-		.pop-close
-			right: 0
-			top: 0
 	+r(640)
 		padding: 20px 15px 70px 15px
 
+.modal-menu
+	width: 100%
+	height: 100%
+	margin-top: 0
+	max-width: 1094px
+	transform: translateX(-40%)
+	transition: transform 0.25s cubic-bezier(0.25, 0.5, 0.5, 0.9), opacity .25s, visibility .25s
+	+r(980)
+		transform: translateX(20%)
+	&-inner
+		display: flex
+		flex-wrap: wrap
+		align-items: flex-start
+		width: 100%
+		height: 100%
+		padding: 0 68px 35px 130px
+		margin-top: 59px
+	&-body
+		+vertical
+		width: 100%
+		text-align: left
+		display: flex
+		flex-wrap: wrap
+		align-items: flex-start
+	.pop-close
+		top: 20px
+		right: 35px
+	&__header
+		margin-bottom: 10px
+		width: 100%
+	&__nav
+		display: flex
+		justify-content: space-between
+		flex-wrap: wrap
+		margin-bottom: 65px
+		width: 100%
+		a
+			display: block
+	&__menu
+		width: 31%
+		a
+			font-weight: bold
+			color:#000000
+			font-size: 18px
+			line-height: 1.5
+			margin-bottom: 30px
+			+tr(color .1s ease-in-out)
+			&:hover
+				+notouch
+					color: #ecdc00
+		&_lvl
+			padding-left: 32px
+			a
+				margin-bottom: 11px
+	&__sub-menu
+		border-top: 1px solid #cccccc
+		// margin-top: 18px
+		padding-top: 16px
+		a
+			font-weight: normal
+			color: #767a7d
+			font-size: 16px
+			line-height: 1.5
+			margin-bottom: 16px
+			+tr(color .1s ease-in-out)
+			&:hover
+				+notouch
+					color: #000000
+	&__contacts
+		width: 100%
+		display: flex
+		justify-content: space-between
+		flex-wrap: wrap
+	&__info
+		width: 31%
+		&_lvl
+			padding-left: 32px
+	&__link-wrap
+		font-size: 20px
+		line-height: 1.2
+		font-weight: bold
+		letter-spacing: -0.02em
+		margin-bottom: 10px
+		a
+			color: #000000
+			+tr(color .1s ease-in-out)
+			&:hover
+				+notouch
+					color: #ecdc00
+	&__mail-wrap
+		font-size: 16px
+		line-height: 1.5
+		a
+			color: #000000
+			+tr(color .1s ease-in-out)
+			&:hover
+				+notouch
+					color: #ecdc00
+	&__c-title
+		margin-bottom: 15px
+		&_inner
+			margin-top: 30px
+			margin-bottom: 10px
+	+r(1024)
+		&-inner
+			padding: 45px 38px 15px 60px
+	+r(768)
+		&-inner
+			padding: 15px 25px 15px 40px
+			margin-top: 45px
+		&__nav
+			width: 50%
+			padding-right: 20px
+		&__contacts
+			width: 50%
+			padding-left: 20px
+		&__menu
+			width: 100%
+			&_lvl
+				padding: 0
+				margin-bottom: 30px
+		&__sub-menu
+			display: none
+		&__info
+			width: 100%
+			&_lvl
+				padding: 0
+			&_empty
+				display: none
+	+r(620)
+		&-inner
+			padding: 15px 16px 30px 16px
+			margin-top: 52px
+		&__close-btn
+			top: 19px
+			right: 19px
+		&__header
+			margin-bottom: 50px
+		&__nav
+			width: 100%
+			padding: 0
+			padding-left: 40px
+			margin-bottom: 0
+		&__contacts
+			width: 100%
+			padding: 0
+			padding-left: 44px
+			margin-bottom: 50px
+		&__info
+			&_lvl
+				margin-top: 20px
+
 .contents-modal
 	width: 100%
-	max-width: 690px
-	& .pop-close
+	max-width: 768px
+	height: 90%
+	overflow: visible
+	padding: 0 60px
+	background-color: rgba(#ffffff, 0)
+	+r(768)
+		margin: 0
+		background-color: rgba(#ffffff, 1)
+		height: 100%
+		padding: 20px 60px
+	+r(540)
+		padding: 20px 40px
+	.pop-close
 		color: #ffffff
-		position: absolute
-		right: -50px
+		right: 0
 		top: -50px
-		+tr(transform .5s ease)
-		+r(850)
-			right: 0px
-			top: -50px
-			padding-right: 0
 		&:hover
 			transform: rotate(90deg)
+		+r(768)
+			color: #000000
+			top: 10px
+			right: 10px
+		+r(540)
+			width: 18px
+			height: 18px
 	&__nav 
 		position: absolute
 		z-index: 10
 		width: 100%
 		top: 50%
 		left: 0
-		+r(850)
-			top: auto
-			bottom: 50px
 	&__next,
 	&__prev,
 		color: #ffffff
@@ -138,51 +290,40 @@
 		position: absolute
 		z-index: 10
 		top: 50%
-		+tr(opacity .3s ease)
-		+r(850)
-			width: 20px
-			height: 50px
+		transition: opacity .3s ease, color .3s ease-in-out
+		+r(768)
 			color: #000000
+		+r(540)
+			width: 25px
+			height: 35px
 	&__next
-		right: -60px
+		right: 10px
 		transform: translateY(-50%)
-		+r(850)
-			right: 10px
+		+r(540)
+			right: 5px
 	&__prev
-		left: -60px
+		left: 10px
 		transform: translateY(-50%) rotate(180deg)
-		+r(850)
-			left: 10px
+		+r(540)
+			left: 5px
 	&__next.slick-disabled,
 	&__prev.slick-disabled,
 		opacity: .3
-	& .modal-container-content
+	.modal-container-content
 		padding: 0 50px 40px 50px
+		+r(540)
+			padding: 0
+	.modal-container-inner
+		height: 100%
+		background-color: #ffffff
+		padding: 5px
+		+notouch
+			.modal-container-inner::-webkit-scrollbar
+				width: 9px
+				background-color: #ebebeb
+			.modal-container-inner::-webkit-scrollbar-thumb
+				box-shadow: inset 0 0 35px 35px #f2db00
 
-.image-slider
-	margin-bottom: 50px
-	img
-		max-width: 100%
-		height: auto
-		display: block
-		margin: 0 auto
-
-.contents-slider
-	&-slide
-		//&__info
-		&__period
-			margin-bottom: 20px
-		&__title
-			font-size: 18px
-			line-height: 1
-			color: #000000
-			margin-bottom: 35px
-		//&__description
-
-.sertificates-modal
-	max-width: 600px
-
-.gallery-album-modal
 	.modal-container-content
 		padding-right: 0
 		padding-left: 0
@@ -268,168 +409,29 @@
 			top: 320px
 			.slider-counter
 				padding: 0 10px
-.modal-menu
-	background-color: #ffffff
-	width: 100%
-	height: 100%
-	margin-top: 0
-	max-width: 1094px
-	position: fixed
-	top: 0
-	left: 0
-	z-index: 100
-	opacity: 0
-	transform: translateX(-20%)
-	// transition: all 0.3s cubic-bezier(0.25, 0.5, 0.5, 0.9)
-	+r(980)
-		transform: translateX(20%)
-	&-inner
-		display: flex
-		flex-wrap: wrap
-		align-items: flex-start
-		width: 100%
-		height: 100%
-		padding: 0 68px 35px 130px
-		margin-top: 59px
-		overflow-y: auto
-	&-body
-		+vertical
-		width: 100%
-		text-align: left
-		display: flex
-		flex-wrap: wrap
-		align-items: flex-start
-	.pop-close
-		display: block
-		color: #000000
-		position: absolute
-		top: 20px
-		right: 35px
-		+tr(all .5s ease)
-		&:hover
-			cursor: pointer
-			transform: rotate(90deg)
-	&__header
-		margin-bottom: 10px
-		width: 100%
-	&__nav
-		display: flex
-		justify-content: space-between
-		flex-wrap: wrap
-		margin-bottom: 65px
-		width: 100%
-		a
+
+	.image-slider
+		margin-bottom: 50px
+		img
+			max-width: 100%
+			height: auto
 			display: block
-	&__menu
-		width: 31%
-		a
-			font-weight: bold
-			color:#000000
-			font-size: 18px
-			line-height: 1.5
+			margin: 0 auto
+		+r(540)
 			margin-bottom: 30px
-			+tr(color .1s ease-in-out)
-			&:hover
-				+notouch
-					color: #ecdc00
-		&_lvl
-			padding-left: 32px
-			a
-				margin-bottom: 11px
-	&__sub-menu
-		border-top: 1px solid #cccccc
-		// margin-top: 18px
-		padding-top: 16px
-		a
-			font-weight: normal
-			color: #767a7d
-			font-size: 16px
-			line-height: 1.5
-			margin-bottom: 16px
-			+tr(color .1s ease-in-out)
-			&:hover
-				+notouch
-					color: #000000
-	&__contacts
-		width: 100%
-		display: flex
-		justify-content: space-between
-		flex-wrap: wrap
-	&__info
-		width: 31%
-		&_lvl
-			padding-left: 32px
-	&__link-wrap
-		font-size: 20px
-		line-height: 1.2
-		font-weight: bold
-		letter-spacing: -0.02em
-		margin-bottom: 10px
-		a
-			color: #000000
-			+tr(color .1s ease-in-out)
-			&:hover
-				+notouch
-					color: #ecdc00
-	&__mail-wrap
-		font-size: 16px
-		line-height: 1.5
-		a
-			color: #000000
-			+tr(color .1s ease-in-out)
-			&:hover
-				+notouch
-					color: #ecdc00
-	&__c-title
-		margin-bottom: 15px
-		&_inner
-			margin-top: 30px
-			margin-bottom: 10px
-	+r(1024)
-		&-inner
-			padding: 45px 38px 15px 60px
-	+r(768)
-		&-inner
-			padding: 0 25px 15px 40px
-			margin-top: 45px
-		&__nav
-			width: 50%
-			padding-right: 20px
-		&__contacts
-			width: 50%
-			padding-left: 20px
-		&__menu
-			width: 100%
-			&_lvl
-				padding: 0
-				margin-bottom: 30px
-		&__sub-menu
-			display: none
-		&__info
-			width: 100%
-			&_lvl
-				padding: 0
-			&_empty
-				display: none
-	+r(620)
-		&-inner
-			padding: 0 16px 30px 16px
-			margin-top: 52px
-		&__close-btn
-			top: 19px
-			right: 19px
-		&__header
-			margin-bottom: 50px
-		&__nav
-			width: 100%
-			padding: 0
-			padding-left: 40px
-			margin-bottom: 0
-		&__contacts
-			width: 100%
-			padding: 0
-			padding-left: 44px
-			margin-bottom: 50px
-		&__info
-			&_lvl
-				margin-top: 20px
+
+	.contents-slider
+		&-slide
+			//&__info
+			&__period
+				margin-bottom: 20px
+				+r(540)
+					margin-bottom: 15px
+			&__title
+				font-size: 18px
+				line-height: 1
+				color: #000000
+				margin-bottom: 35px
+				+r(540)
+					margin-bottom: 20px
+			//&__description
