telwrapper form complite

--- a/src/pug/3-2service-inner.pug
+++ b/src/pug/3-2service-inner.pug
@@ -441,11 +441,13 @@ block content
 																label.input-label(for="completeСlieentName") ФИО*
 														.input-item.w50.telwrapper
 															.input-wrapper
-																select.input-main.js-select.countryTels(name='telCountry',id='telCountry')
+																select.input-main.js-select.countryTels(
+																		name='telCountry',
+																		id='telCountry')
 																	option(value="+375", data-img='img/png/blr.png') +375
 																	option(value="+776", data-img='img/png/blr.png') +776
 																	option(value="8 099", data-img='img/png/blr.png') 8 099
-																label.input-label.fixed(for="clieentPhone") Регион
+																label.input-label.fixed(for="telCountry") Регион
 															.input-wrapper
 																input.input-main(
 																	type="tel",
