--- a/src/sass/_main-nav.sass
+++ b/src/sass/_main-nav.sass
@@ -8,7 +8,7 @@
 	padding-left: 16px
 	position: fixed
 	z-index: 10
-	box-shadow: 0 0px 16px rgba(119,115,18,.24)
+	box-shadow: 0 0px 16px rgba(119,115,18,.4)
 	top: 0
 	left: 0
 	&__list
@@ -19,6 +19,7 @@
 		margin-right: 0
 	&__item
 		margin-right: 38px
+		overflow: hidden
 		&:last-child
 			margin-right: 0
 	&__link
