--- a/src/pug/includes/_modals.pug
+++ b/src/pug/includes/_modals.pug
@@ -94,11 +94,11 @@ include _mixins.pug
 										label.input-label(for="clieentEmail") Email*
 								.input-item.w50.telwrapper
 									.input-wrapper
-										select.input-main.js-select.countryTels(name='telCountry',id='telCountry')
+										select.input-main.js-select.countryTels(name='telCountry',id='telCountry-1')
 											option(value="+375", data-img='img/png/blr.png') +375
 											option(value="+776", data-img='img/png/blr.png') +776
 											option(value="8 099", data-img='img/png/blr.png') 8 099
-										label.input-label.fixed(for="clieentPhone") Регион
+										label.input-label.fixed(for="telCountry-1") Регион
 									.input-wrapper
 										input.input-main(
 											type="tel",
@@ -106,8 +106,8 @@ include _mixins.pug
 											data-validation-regexp="^[-0-9()+ ]+$",
 											data-validation-error-msg="Введите корректный номер телефона",
 											name="clieentPhone",
-											id="clieentPhone")
-										label.input-label.sm(for="clieentPhone") Контактный телефон
+											id="clieentPhone-1")
+										label.input-label.sm(for="clieentPhone-1") Контактный телефон
 						hr.form-content-devider
 						.form-content
 							.form-content-head Тема обращения
