--- a/src/sass/_inputs.sass
+++ b/src/sass/_inputs.sass
@@ -66,14 +66,11 @@
 				&:focus
 					border: 1px solid transparent
 			.input-main.error
-				border: 1px solid transparent
+				border: 1px solid #ed1c24
 			.select2-container--open
-				border: 1px solid transparent !important
 				margin-top: 0 !important
 			.input-wrapper
 				width: auto
-				border: 1px solid #cccccc
-				border-radius: 2px
 				// margin: 0!important
 				.select2,.input-main
 					height: 60px
@@ -84,6 +81,8 @@
 					min-width: 115px
 					max-width: 150px
 					.select2,.input-main
+						border: 1px solid #a6a6a6
+						border-right: none
 						border-top-right-radius: 0
 						border-bottom-right-radius: 0
 						padding-left: 20%
@@ -111,7 +110,31 @@
 					.input-main
 						border-top-left-radius: 0
 						border-bottom-left-radius: 0
-						border-left: 1px solid #a6a6a6
+						border: 1px solid #a6a6a6
+						&.error
+							border-color: #ed1c24
+			&.telwrapper_active
+				.input-wrapper
+					&:first-child
+						.select2,.input-main
+							border-width: 2px
+							border-color: #000000
+							border-right: none
+					&:last-child
+						.input-main
+							border: 2px solid #000000
+							border-left: 1px solid #a6a6a6
+							&.error
+								border-color: #ed1c24
+			&.telwrapper_active_error
+				.input-wrapper
+					&:first-child
+						.select2,.input-main
+							border-color: #ed1c24
+					&:last-child
+						.input-main
+							border-color: #ed1c24
+
 			//.countryTels
 			
 	&-wrapper
@@ -242,6 +265,7 @@
 		white-space: nowrap
 		text-overflow: ellipsis
 		overflow: hidden
+		pointer-events: none
 		+tr(all .3s ease)
 		+r(640)
 			max-width: 80%
