final correct commit

--- a/src/pug/gallery-album-2.pug
+++ b/src/pug/gallery-album-2.pug
@@ -1,7 +1,7 @@
 include includes/_mixins.pug
 
 .wrap
-	.modal-container.contents-modal
+	.modal-container.contents-modal.gallery-modal
 		button(type="button").pop-close.closePopup
 				+icon('close')
 		.modal-container-inner
