--- a/src/pug/includes/_footer.pug
+++ b/src/pug/includes/_footer.pug
@@ -84,4 +84,4 @@ include _mixins.pug
 				a.text-small(href="#") Карта сайта
 				a(href="#").text-small.site-dev
 					span Разработка сайта:&#32;
-					|FLEX.MEDIA
+					strong FLEX.MEDIA
