--- a/src/sass/_inputs.sass
+++ b/src/sass/_inputs.sass
@@ -76,7 +76,6 @@
 					height: 60px
 				&:first-child
 					// max-width: 135px
-					margin-left: -1px
 					width: 53%
 					min-width: 115px
 					max-width: 150px
@@ -105,8 +104,8 @@
 					border-top-left-radius: 0
 					border-bottom-left-radius: 0
 					flex-grow: 1
-					.help-block
-						left: -53%
+					// .help-block
+					// 	left: -53%
 					.input-main
 						border-top-left-radius: 0
 						border-bottom-left-radius: 0
