--- a/src/sass/lib/_variables.sass
+++ b/src/sass/lib/_variables.sass
@@ -1,5 +1,5 @@
 // font variables
-$o: 'Arial', sans-serif
+$o: 'Arial', 'Helvetica', 'Roboto', sans-serif
 
 // color variables
 $main-decor-color: #fff233
