--- a/src/sass/_modal.sass
+++ b/src/sass/_modal.sass
@@ -79,7 +79,7 @@
 .application-modal
 	width: 100%
 	height: 100%
-	padding: 20px 70px 70px 80px
+	padding: 20px 70px 40px 80px
 	max-width: 873px
 	margin-top: 0
 	margin-bottom: 0
@@ -89,13 +89,14 @@
 		background-color: #ffffff
 		&__footer
 			background-color: #ffffff
+			padding-bottom: 10px
 	.pop-close
 		right: 25px
 		top: 20px
 	+r(850)
-		padding: 20px 30px 70px 30px
+		padding: 20px 30px 40px 30px
 	+r(640)
-		padding: 20px 15px 70px 15px
+		padding: 20px 15px 40px 15px
 
 .modal-menu
 	width: 100%
@@ -112,8 +113,7 @@
 		align-items: flex-start
 		width: 100%
 		height: 100%
-		padding: 0 68px 35px 130px
-		margin-top: 59px
+		padding: 59px 68px 35px 130px
 	&-body
 		+vertical
 		width: 100%
@@ -202,11 +202,10 @@
 			margin-bottom: 10px
 	+r(1024)
 		&-inner
-			padding: 45px 38px 15px 60px
+			padding: 60px 38px 15px 60px
 	+r(768)
 		&-inner
-			padding: 15px 25px 15px 40px
-			margin-top: 45px
+			padding: 60px 25px 15px 40px
 		&__nav
 			width: 50%
 			padding-right: 20px
@@ -228,8 +227,7 @@
 				display: none
 	+r(620)
 		&-inner
-			padding: 15px 16px 30px 16px
-			margin-top: 52px
+			padding: 60px 16px 30px 16px
 		&__close-btn
 			top: 19px
 			right: 19px
@@ -323,12 +321,6 @@
 				background-color: #ebebeb
 			.modal-container-inner::-webkit-scrollbar-thumb
 				box-shadow: inset 0 0 35px 35px #f2db00
-
-	.modal-container-content
-		padding-right: 0
-		padding-left: 0
-		position: relative
-		overflow: hidden
 	.image-paginate-slider
 		width: 100%
 		max-width: 70px
@@ -435,3 +427,10 @@
 				+r(540)
 					margin-bottom: 20px
 			//&__description
+
+.gallery-modal
+	.modal-container-content
+		padding-right: 0
+		padding-left: 0
+		position: relative
+		overflow: hidden
