--- a/src/pug/6-0contacts.pug
+++ b/src/pug/6-0contacts.pug
@@ -60,7 +60,7 @@ block content
 							.text-primary.text-primary_black УП «Велком» Юридический адрес: 220030, Республика Беларусь, г.Минск, ул. Интернациональная, 36-2. Почтовый адрес: 220141, г. Минск, пр. Независимости, д. 168, корп. 2, к. 12
 
 					.map-container
-						#map.map-elem(data-lat='53.943744', data-lon='27.521280', data-icon='img/svg/point.svg')
+						#map.map-elem(data-lat='53.943744', data-lon='27.521280', data-icon='img/svg-icon/point.svg')
 					.contacts-form
 						form(action="#").js-validate
 							.form-block
