--- a/src/pug/includes/_modals.pug
+++ b/src/pug/includes/_modals.pug
@@ -40,22 +40,22 @@ include _mixins.pug
 							a(href="#").text-primary IaaS
 				.modal-menu__contacts
 					.modal-menu__info
-						p.text-small.modal-menu__c-title Справочно-информационная служба
-						p.modal-menu__link-wrap
+						.text-small.modal-menu__c-title Справочно-информационная служба
+						.modal-menu__link-wrap
 							a(href="tel:+375 29 600 04 11") +375 29 600 04 11
 							| , доб.&nbsp;6
-						p.modal-menu__mail-wrap
+						.modal-menu__mail-wrap
 							a(href="mailto:info@velcom.by") info@velcom.by
-						p.text-small.modal-menu__c-title_inner Тел./факс
-						p.modal-menu__link-wrap
+						.text-small.modal-menu__c-title_inner Тел./факс
+						.modal-menu__link-wrap
 							a(href="tel:+375 29 600 04 12") +375 29 600 04 12
 					.modal-menu__info.modal-menu__info_lvl
-						p.text-small.modal-menu__c-title Техническая поддержка
-						p.modal-menu__link-wrap
+						.text-small.modal-menu__c-title Техническая поддержка
+						.modal-menu__link-wrap
 							a(href="tel:+375 29 600 20 20") +375 29 600 20 20
-						p.modal-menu__link-wrap
+						.modal-menu__link-wrap
 							a(href="tel:+375 29 600 20 20") +375 29 600 20 20
-						p.modal-menu__mail-wrap
+						.modal-menu__mail-wrap
 							a(href="mailto:support@velcom.by") support@velcom.by
 					.modal-menu__info.modal-menu__info_empty
 
