--- a/src/sass/_footer.sass
+++ b/src/sass/_footer.sass
@@ -102,7 +102,8 @@ footer
 	display: flex
 	justify-content: flex-end
 	&__link
-		display: block
+		display: inline-block
+		font-size: 0
 		background-color: #000000
 		width: 32px
 		height: 32px
@@ -111,7 +112,7 @@ footer
 		margin-right: 12px
 		color: #ffffff
 		cursor: pointer
-		+tr(all .3s ease)
+		transition: background-color .2s ease, color .1s ease
 		position: relative
 		z-index: 1
 		&:after
@@ -125,7 +126,7 @@ footer
 			position: absolute
 			left: 0
 			top: 0
-			+tr(all .3s ease)
+			transition: opacity .3s ease
 		&_insta
 			&:after
 				background-image: linear-gradient( 45deg, rgb(255,216,32) 0%, rgb(253,55,111) 50%, rgb(161,25,170) 100%)
@@ -144,6 +145,7 @@ footer
 		&:hover
 			background-color: rgba(#000000, 0)
 			color: #ffffff
+			transition-delay: .1s
 			&:after
 				opacity: 1
 		&:last-child
