--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -157,7 +157,7 @@ body
 			box-sizing: content-box
 	&__text
 		color: rgba(#ffffff, .8)
-		margin-bottom: 60px
+		margin-bottom: 30px
 		max-width: 90%
 	+r(1024)
 		&__title
@@ -566,8 +566,19 @@ body
 			& > div
 				width: 100%
 				height: 100%
+		&:before
+			content: ''
+			display: block
+			width: 100%
+			height: 100%
+			position: absolute
+			z-index: 1
+			left: 0
+			top: 0
+			background-color: #000000
+			opacity: .7
 	&-text
-		padding: 110px 0 30px
+		padding: 110px 0 50px
 	&__slide
 		position: relative
 		z-index: 1
@@ -640,17 +651,6 @@ body
 	position: relative
 	background-repeat: no-repeat
 	background-size: cover
-	&:before
-			content: ''
-			display: block
-			width: 100%
-			height: 100%
-			position: absolute
-			z-index: 1
-			left: 0
-			top: 0
-			background-color: #000000
-			opacity: .7
 .data-dots
 	display: flex
 	width: 100%
@@ -1289,6 +1289,9 @@ body
 		.accordeon-body
 			&-content
 				padding-left: 0
+	&:hover
+		box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.2)
+		background-color: #ffffff
 	&.active
 		box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.2)
 		background-color: #ffffff
@@ -1316,14 +1319,16 @@ body
 		input
 			display: none
 			&:checked + .accordeon-head-custom .accordeon-checked
-				opacity: 1
+				width: 15px
 		.accordeon-checked
-			position: absolute
-			top: 50%
-			left: 50%
-			transform: translate(-50%, -50%)
-			opacity: 0
-			+tr(all .3s ease)
+			display: block
+			width: 0
+			height: 100%
+			margin-left: 4px
+			overflow: hidden
+			transition: width .4s ease-in-out
+			svg
+				min-width: 15px
 		.accordeon-head-custom
 			width: 25px
 			height: 25px
