--- a/src/sass/_modal.sass
+++ b/src/sass/_modal.sass
@@ -32,9 +32,9 @@
 	z-index: 200
 	opacity: 0
 	visibility: hidden
-	transition: background-color .25s, opacity .25s, visibility .25s
+	transition: background-color .25s, opacity .25s, visibility .15s
 	text-align: center
-	transition-delay: .1s
+	transition-delay: 0s
 	contain: paint 
 	pointer-events: all
 	&_fade-right
@@ -45,7 +45,7 @@
 		background-color: rgba(0,0,0, .6)
 		visibility: visible
 		opacity: 1
-		transition-delay: 0s
+		transition-delay: .35s, .35s, .1s
 		.modal-container
 			opacity: 1
 			transition-delay: .2s
@@ -60,10 +60,10 @@
 	width: auto
 	background-color: #ffffff
 	position: relative
-	transition: opacity .25s, visibility .25s
+	transition: opacity .3s, visibility .1s
 	opacity: 0
 	visibility: hidden
-	transition-delay:  0s
+	transition-delay:  0
 	overflow-x: hidden
 	overflow-y: auto
 	&-content
@@ -84,7 +84,7 @@
 	margin-top: 0
 	margin-bottom: 0
 	transform: translateX(40%)
-	transition: transform 0.25s cubic-bezier(0.25, 0.5, 0.5, 0.9), opacity .25s, visibility .25s
+	transition: transform 0.35s cubic-bezier(0.25, 0.5, 0.5, 0.9)
 	.form-block
 		background-color: #ffffff
 		&__footer
@@ -104,7 +104,7 @@
 	margin-top: 0
 	max-width: 1094px
 	transform: translateX(-40%)
-	transition: transform 0.25s cubic-bezier(0.25, 0.5, 0.5, 0.9), opacity .25s, visibility .25s
+	transition: transform 0.35s cubic-bezier(0.25, 0.5, 0.5, 0.9)
 	+r(980)
 		transform: translateX(20%)
 	&-inner
