--- a/src/sass/_modal.sass
+++ b/src/sass/_modal.sass
@@ -382,7 +382,7 @@
 			+r(520)
 				padding: 0 50px 0 110px
 			+r(450)
-				padding: 0 30px 0 70px
+				padding: 35px 5px 0 5px
 	.contents-count
 		position: absolute
 		left: 0
@@ -395,9 +395,10 @@
 		+r(520)
 			top: 370px
 		+r(450)
+			height: auto
 			top: 320px
 			.slider-counter
-				padding: 0 10px
+				padding: 0 5px
 
 	.image-slider
 		margin-bottom: 50px
