--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -1003,7 +1003,7 @@ body
 	display: flex
 	align-items: flex-start
 	justify-content: space-between
-	&__img
+	&-blank
 		width: 20%
 		img
 			margin: 0
@@ -1011,14 +1011,14 @@ body
 		width: 75%
 	+r(768)
 		flex-direction: column
-		&__img
+		&-blank
 			width: auto
 			max-width: 50%
 			margin-bottom: 38px
 		blockquote
 			width: 100%
 	+r(768)
-		&__img
+		&-blank
 				width: auto
 				max-width: 90%
 .projects-head
