--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -32,6 +32,7 @@ svg
 	display: inline-block
 	max-width: 100%
 	max-height: 100%
+	pointer-events: none
 
 img
 	max-width: 100%
@@ -909,6 +910,7 @@ body
 			width: 100%
 			max-width: 450px
 			margin: 0 auto
+			margin-bottom: 15px
 			&:nth-child(3n)
 				margin-right: auto
 	.site-map-list
@@ -1244,16 +1246,7 @@ body
 			left: auto
 			right: 0
 		+r(768)
-			position: absolute
-			left: 0
-			right: auto
-	.side-bar-nav
-		+r(768)
-			width: calc(100% - 120px)
-			margin-left: auto
-			margin-right: 0
-			margin-bottom: 40px
-
+			display: none
 	.content-inner__title
 		margin-right: 120px
 		+r(768)
@@ -1348,7 +1341,8 @@ body
 		align-items: center
 		&:hover
 			cursor: pointer
-
+		+r(450)
+			align-items: flex-start
 	&-name
 		padding: 10px
 		width: 70%
@@ -1361,6 +1355,8 @@ body
 			width: 35%
 	&-icon
 		width: 5%
+		+r(450)
+			align-self: center
 		span
 			display: block
 			margin-right: 0
