--- a/src/sass/_repeat_block.sass
+++ b/src/sass/_repeat_block.sass
@@ -14,6 +14,8 @@
 		margin-bottom: 40px
 		display: flex
 		align-items: center
+		+r(768)
+			font-size: 30px
 	h3
 		color: #000000
 		font-size: 20px
@@ -294,6 +296,7 @@ p
 			+notouch
 				strong
 					color: #ecdc00
+
 .h1
 	color: #ffffff
 	font-size: 48px
@@ -849,21 +852,16 @@ p
 		line-height: 1.5
 		font-weight: bold
 		position: relative
-		+tr(all .3s ease-in-out)
 		span.link-i-arrow
 			display: block
+			font-size: 0
 			height: 5px
 			width: 8px
 			position: absolute
 			right: 15px
 			top: 50%
 			transform: translateY(-50%)
-			+tr(all .3s ease)
-			svg
-				position: absolute
-				top: 0
-				left: 0
-
+			+tr(transform .3s ease)
 	+r(768)
 		width: 80%
 		& .link-navigation
