fix js - missclick -> close sidebar

--- a/src/sass/_main-nav.sass
+++ b/src/sass/_main-nav.sass
@@ -101,6 +101,7 @@
 			margin-bottom: 0
 	+r(980)
 		order: 2
+		margin-left: 25px
 
 .application-btn
 	line-height: 2.3
@@ -113,7 +114,6 @@
 	+r(980)
 		border: none
 		padding: 0
-		margin-right: 20px
 		&__desc
 			display: none
 		&__mob
