--- a/src/sass/_repeat_block.sass
+++ b/src/sass/_repeat_block.sass
@@ -871,7 +871,7 @@ p
 			left: 0
 			top: 60px
 			width: 100%
-			z-index: 10
+			z-index: 2
 			visibility: hidden
 			opacity: 0
 			transition: visibility .3s linear, opacity .3s ease-in-out, box-shadow .3s linear 1s
@@ -882,6 +882,7 @@ p
 			border: 1px solid #a6a6a6
 			&.sidebar-menu-visible
 				box-shadow: 0 0.75rem 1.875rem 0 rgba(0,0,0,.2)
+				background-color: #ffffff
 				span.link-i-arrow
 					transform: translateY(-50%) rotate(180deg)
 				& + .link-navigation
