fix popup-gallery open

--- a/src/pug/5-1project-inner.pug
+++ b/src/pug/5-1project-inner.pug
@@ -82,7 +82,7 @@ block content
 						hr
 						h3 Отзыв клиента
 						.feedback
-							a(href="#", data-view-img="blanck.jpg", data-modal="view-img-popup").feedback-blank.js-view-img
+							a(href="#", data-view-img="sertificate-2-big.jpg", data-modal="view-img-popup").feedback-blank.js-view-img
 								img(src="img/blanck.jpg", alt="blanck")
 							blockquote
 								i Дата-цент Velcom сыграл решающую роль в нашем процессе оптимизации работ.
