gallery modal fix height

--- a/src/sass/_modal.sass
+++ b/src/sass/_modal.sass
@@ -333,8 +333,8 @@
 		height: 520px
 		overflow: hidden
 		position: absolute
-		left: 0
-		right: 0
+		left: 10px
+		top: 0
 		z-index: 20
 		.slick-list
 			padding: 0 !important
@@ -437,6 +437,7 @@
 
 .gallery-modal
 	transition-delay: .5s
+	height: auto
 	.modal-container-content
 		padding-right: 0
 		padding-left: 0
